Bug 462943 - [Android] Krita Next Nightly builds do not show translations properly
Summary: [Android] Krita Next Nightly builds do not show translations properly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-12 07:34 UTC by Tyson Tan
Modified: 2023-01-05 09:03 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2022-12-12 07:34:23 UTC
Under Android, Krita Next nightly builds do not show translations properly. Only a few buttons (translated via Qt, I assume) have translations. 

This issue has been around for years according to our local community. It sometimes happened to stable versions too. This is the first time I experienced it first hand. I have exhausted every means but to no avail.

I would have assume the translations were not properly packaged. But if I recalled correctly, when I first opened Krita Next builds yesterday on this device, it was able to display translations properly. But I wasn't able to do that today after a factory reset.

On the same device, installed side-by-side, Krita 5.1.2's translation is working as intended.

Tested on:
Samsung Galaxy Tab S8 with One UI 5.0 (Android 13).
Krita 5.1.2 and latest Krita Next nightlies (5.2.0).
Comment 1 sh_zam 2022-12-12 09:36:13 UTC
Git commit a876859695b5eda41fb14f80b4a7f4eecef23e77 by Sharaf Zaman.
Committed on 12/12/2022 at 09:35.
Pushed by szaman into branch 'master'.

Android: Fix issue with translations not showing on Nightly

M  +1    -6    krita/main.cc

https://invent.kde.org/graphics/krita/commit/a876859695b5eda41fb14f80b4a7f4eecef23e77
Comment 2 sh_zam 2022-12-12 09:37:16 UTC
Hello Tyson! Thanks for reporting the bug, I've fixed the issue, please test the Nightly tomorrow (I unfortunately was late by 10 minutes, otherwise Nightly would've been ready today :( ).
Comment 3 Tyson Tan 2022-12-13 02:42:40 UTC
Thank you, Sharaf! :)
Comment 4 sh_zam 2022-12-23 13:50:37 UTC
Git commit d363b35221284dd282f4c3f46238633ec2a7ac29 by Sharaf Zaman.
Committed on 23/12/2022 at 13:49.
Pushed by szaman into branch 'krita/5.1'.

Android: Fix issue with translations not showing on Nightly
(cherry picked from commit a876859695b5eda41fb14f80b4a7f4eecef23e77)

M  +1    -6    krita/main.cc

https://invent.kde.org/graphics/krita/commit/d363b35221284dd282f4c3f46238633ec2a7ac29
Comment 5 Halla Rempt 2023-01-05 09:03:26 UTC
*** Bug 463866 has been marked as a duplicate of this bug. ***