Android: Fix issue with translations not showing on Nightly

BUG:462943
(cherry picked from commit a876859695b5eda41fb14f80b4a7f4eecef23e77)